src/optimizer/core/src/snapshots/qwik_core__test__example_multi_capture.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';

export const Foo = component$(({foo}) => {
    const arg0 = 20;
    return $(() => {
        const fn = ({aaa}) => aaa;
        return (
            <div>
              {foo}{fn()}{arg0}
            </div>
        )
    });
})

export const Bar = component$(({bar}) => {
    return $(() => {
        return (
            <div>
              {bar}
            </div>
        )
    });
})

============================= test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_foo_component")
, "Foo_component"));
export const Bar = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_bar_component")
, "Bar_component"));

============================= h_test_foo_component1.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Foo_component1 = ()=>{
    const [arg0, foo] = qwik.useLexicalScope();
    const fn = ({ aaa  })=>aaa
    ;
    return <div >

              {foo}{fn()}{arg0}

            </div>;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component1",
  "entry": null,
  "canonicalFilename": "h_test_foo_component1",
  "extension": "tsx",
  "parent": "Foo_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true
}
*/
============================= h_test_foo_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Foo_component = ({ foo  })=>{
    const arg0 = 20;
    return qwik.qrl(()=>import("./h_test_foo_component1")
    , "Foo_component1", [
        arg0,
        foo
    ]);
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component",
  "entry": null,
  "canonicalFilename": "h_test_foo_component",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
============================= h_test_bar_component3.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Bar_component3 = ()=>{
    const [bar] = qwik.useLexicalScope();
    return <div >

              {bar}

            </div>;
};

/*
{
  "origin": "test.tsx",
  "name": "Bar_component3",
  "entry": null,
  "canonicalFilename": "h_test_bar_component3",
  "extension": "tsx",
  "parent": "Bar_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true
}
*/
============================= h_test_bar_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Bar_component = ({ bar  })=>{
    return qwik.qrl(()=>import("./h_test_bar_component3")
    , "Bar_component3", [
        bar
    ]);
};

/*
{
  "origin": "test.tsx",
  "name": "Bar_component",
  "entry": null,
  "canonicalFilename": "h_test_bar_component",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
