src/optimizer/core/src/snapshots/qwik_core__test__example_qwik_conflict.snap
---
source: src/optimizer/core/src/test.rs
assertion_line: 834
expression: output

---
==INPUT==


import { qHook, qComponent, h, onRender, withStyle } from '@builder.io/qwik';

export const Foo = qComponent("my-foo", () => {
    const qwik = 12;
    console.log(qwik);
    return onRender(() => {
        return (
            <div/>
        )
    });
})
    
============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { qComponent } from '@builder.io/qwik';
export const Foo = /*#__PURE__*/ qComponent("my-foo", qwik.qrl(()=>import("./h_test_foo_onmount")
, "Foo_onmount"));

============================= h_test_foo_onrender.js (ENTRY POINT)==

import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
import * as qwik from "@builder.io/qwik";
import { h } from "@builder.io/qwik";
export const Foo_onRender = ()=>{
    return(/*#__PURE__*/ _jsx("div", {}));
};

============================= h_test_foo_onmount.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { onRender } from "@builder.io/qwik";
export const Foo_onmount = ()=>{
    const qwik1 = 12;
    console.log(qwik1);
    return onRender(qwik.qrl(()=>import("./h_test_foo_onrender")
    , "Foo_onRender"));
};

== HOOKS ==

[
  {
    "origin": "test.tsx",
    "name": "Foo_onRender",
    "entry": null,
    "canonicalFilename": "h_test_foo_onrender"
  },
  {
    "origin": "test.tsx",
    "name": "Foo_onmount",
    "entry": null,
    "canonicalFilename": "h_test_foo_onmount"
  }
]

== DIAGNOSTICS ==

[]
