src/optimizer/core/src/snapshots/qwik_core__test__example_renamed_exports.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$ as Component, $ as onRender, useStore } from '@builder.io/qwik';

export const App = Component((props) => {
    const state = useStore({thing: 0});

    return onRender(() => (
        <div>{state.thing}</div>
    ));
});

============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_app_component")
, "App_Component"));

============================= h_test_app_component1.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const App_Component1 = ()=>{
    const [state] = qwik.useLexicalScope();
    return /*#__PURE__*/ _jsx("div", {
        children: state.thing
    });
};

/*
{
  "origin": "test.tsx",
  "name": "App_Component1",
  "entry": null,
  "canonicalFilename": "h_test_app_component1",
  "extension": "js",
  "parent": "App_Component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true
}
*/
============================= h_test_app_component.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { useStore } from "@builder.io/qwik";
export const App_Component = (props)=>{
    const state = useStore({
        thing: 0
    });
    return qwik.qrl(()=>import("./h_test_app_component1")
    , "App_Component1", [
        state
    ]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_Component",
  "entry": null,
  "canonicalFilename": "h_test_app_component",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
