src/optimizer/core/src/snapshots/qwik_core__test__example_skip_transform.snap
---
source: src/optimizer/core/src/test.rs
assertion_line: 915
expression: output

---
==INPUT==


import { component$ as Component, $ as onRender } from '@builder.io/qwik';

export const handler = $(()=>console.log('hola'));

export const App = component$((props) => {
    useStyle$('hola');
    return $(() => (
        <div>{state.thing}</div>
    ));
});

============================= test.js ==

import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const handler = $(()=>console.log('hola')
);
export const App = component$((props)=>{
    useStyle$('hola');
    return $(()=>/*#__PURE__*/ _jsx("div", {
            children: state.thing
        })
    );
});

== DIAGNOSTICS ==

[]
