src/optimizer/core/src/snapshots/qwik_core__test__example_with_tagname.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';

export const Foo = component$(() => {
    return $(() => {
        return (
            <div>
            </div>
        )
    });
}, {
    tagName: "my-foo",
});

============================= test.tsx ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_foo_component")
, "Foo_component"), {
    tagName: "my-foo"
});

============================= h_test_foo_component1.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Foo_component1 = ()=>{
    return <div >

            </div>;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component1",
  "entry": null,
  "canonicalFilename": "h_test_foo_component1",
  "extension": "tsx",
  "parent": "Foo_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/
============================= h_test_foo_component.tsx (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Foo_component = ()=>{
    return qwik.qrl(()=>import("./h_test_foo_component1")
    , "Foo_component1");
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component",
  "entry": null,
  "canonicalFilename": "h_test_foo_component",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
== DIAGNOSTICS ==

[]
