src/optimizer/core/src/snapshots/qwik_core__test__issue_117.snap
---
source: src/optimizer/core/src/test.rs
assertion_line: 1084
expression: output

---
==INPUT==


export const cache = patternCache[cacheKey] || (patternCache[cacheKey]={});
    
============================= project/test.tsx ==

export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});

== DIAGNOSTICS ==

[]
