src/optimizer/core/src/snapshots/qwik_core__test__issue_118.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';
import thing from 'lib';
import * as all from 'lib';
import {s as se} from 'lib';

export const Header = component$(() => {
    return $(() => <Footer>{thing}{all()}{se()}</Footer>)
});

export const Footer = component$();

============================= project/test.js ==

import*as b from"@builder.io/qwik";import{componentQrl as a}from"@builder.io/qwik";export const Header=/*#__PURE__*/ a(b.qrl(()=>import("../entry_hooks"),"Header_component"));export const Footer=/*#__PURE__*/ a();
============================= h_test_header_component1.js ==

import*as a from"@builder.io/qwik";import{Footer as b}from"./project/test";import{jsxs as c}from"@builder.io/qwik/jsx-runtime";import*as d from"lib";import{s as e}from"lib";import f from"lib";export const Header_component1=()=>/*#__PURE__*/ c(b,{children:[f,d(),e()]});
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component1",
  "entry": "entry_hooks",
  "canonicalFilename": "h_test_header_component1",
  "extension": "js"
}
*/
============================= h_test_header_component.js ==

import*as a from"@builder.io/qwik";export const Header_component=()=>a.qrl(()=>import("./entry_hooks"),"Header_component1");
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component",
  "entry": "entry_hooks",
  "canonicalFilename": "h_test_header_component",
  "extension": "js"
}
*/
============================= entry_hooks.js (ENTRY POINT)==

export{Header_component1}from"./h_test_header_component1";export{Header_component}from"./h_test_header_component";
== DIAGNOSTICS ==

[]
