src/optimizer/core/src/snapshots/qwik_core__test__issue_150.snap
---
source: src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@builder.io/qwik';

export const Greeter = component$(() => {
    return $(() => {
        return (
            <div/>
        )
    });
});

const d = $(()=>console.log('thing'));

============================= test.js ==

import * as qwik from "@builder.io/qwik";
import { componentQrl } from "@builder.io/qwik";
export const Greeter = /*#__PURE__*/ componentQrl(qwik.qrl(()=>import("./h_test_greeter_component")
, "Greeter_component"));
qwik.qrl(()=>import("./h_test_d")
, "d");

============================= h_test_greeter_component1.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const Greeter_component1 = ()=>{
    return /*#__PURE__*/ _jsx("div", {});
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component1",
  "entry": null,
  "canonicalFilename": "h_test_greeter_component1",
  "extension": "js"
}
*/
============================= h_test_greeter_component.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const Greeter_component = ()=>{
    return qwik.qrl(()=>import("./h_test_greeter_component1")
    , "Greeter_component1");
};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component",
  "entry": null,
  "canonicalFilename": "h_test_greeter_component",
  "extension": "js"
}
*/
============================= h_test_d.js (ENTRY POINT)==

import * as qwik from "@builder.io/qwik";
export const d = ()=>console.log('thing')
;

/*
{
  "origin": "test.tsx",
  "name": "d",
  "entry": null,
  "canonicalFilename": "h_test_d",
  "extension": "js"
}
*/
== DIAGNOSTICS ==

[]
