src/optimizer/core/src/snapshots/qwik_core__test__optimize_fixture_1.snap
---
source: src/test.rs
expression: res

---
Err(
    Os {
        code: 2,
        kind: NotFound,
        message: "No such file or directory",
    },
)
